# anolis-protocol

./: .gitignore  README.md  buf.gen.yaml  pyproject.toml
.github/workflows/: buf.yml  release.yml
docs/: README.md  index.md  semantics.md  versioning.md
proto/anolis/deviceprovider/v1/: call.proto  envelope.proto  handshake.proto  health.proto  inventory.proto  readiness.proto  status.proto  telemetry.proto  types.proto  value.proto
